--- a/css/style.css
+++ b/css/style.css
@@ -325,9 +325,9 @@ nav {
 }
 
 .about-image img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;  /* keeps perfect aspect ratio */
+  width: 300px;
+  height: 300px;
+  object-fit: cover;  
   border-radius: 50%;
 }
 
@@ -674,8 +674,9 @@ footer {
   }
 
   .about-image {
-    flex: 0 0 200px;
-    height: 200px;
+    flex: 0 0 300px;
+    height: 300px;
+    width: 300px;
   }
 
   .features-grid,
